--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -141,7 +141,7 @@ div#html5stylemidcol img { margin-left:10px;
 footer { clear:both; color:maroon; text-align:center;
 }
 
-/*add display attributes for the semantic tags*/
+/*add display attributes for the semantic tags*
 header, footer, section, article, nav { display:block;
 }
 /*SET FONTS*
@@ -237,24 +237,24 @@ set the gallery block 10px further to the right
 
 
 /* Listing 2-6b. The CSS Style Sheet for Listing 2-6a (gallery-page.css) */
-/*set attributes for consistent appearance in all browsers*/
+/*set attributes for consistent appearance in all browsers*
 html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
-/*set images to have no borders*/
+/*set images to have no borders*
 img {
 border:0;
 }
-/*add display attributes for the semantic tags*/
+/*add display attributes for the semantic tags*
 header, footer, section, article, nav { display:block;
 }
-/*SET FONTS*/
+/*SET FONTS*
 span.small { font-size:small;
 }
 h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
 }
 h2 {font-size:large; font-family:"times new roman"; text-align:center;
 }
-/*PAGE LAYOUT*/
+/*PAGE LAYOUT*
 body {margin:auto; width:970px;
 }
 header { width:970px;
@@ -263,7 +263,7 @@ nav#gallerypagenav.data { margin-left:10px; width:115px;
 }
 nav#gallerypagenav ul { margin-left:0; border:0; width:115px;
 }
-/*set far right column for ads*/
+/*set far right column for ads*
 div#gallerypagerightcol { width:150px; float:right; text-align:center;
 }
 div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
@@ -276,19 +276,19 @@ div#gallerypagegallery-block { position:relative; left: 8em; top: -10px;
 }
 
 
-/*set gallery block position*/
+/*set gallery block position*
 div#gallery-block { position:relative; left: 30px; top:10px;
 }
-/*set footer*/
+/*set footer*
 footer { clear:both; color:black; text-align:center; width:970px;
 }
 .clear { clear:both;
 }
 
-/*add display attributes for the semantic tags*/
+/*add display attributes for the semantic tags*
 header, footer, section, article, nav { display:block;
 }
-/*SET FONTS*/
+/*SET FONTS*
 span.small { font-size:small;
 }
 /*
@@ -296,7 +296,7 @@ h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
 }
 h2 {font-size:large; font-family:"times new roman"; text-align:center;
 }
-/*PAGE LAYOUT*/
+/*PAGE LAYOUT*
 body {margin:auto; width:970px;
 }
 header { width:970px;
@@ -305,23 +305,23 @@ nav#gallerypagenav { float:left; margin-left:10px; width:115px;
 }
 nav#gallerypagenav ul { margin-left:0; border:0; width:115px;
 }
-/*set far right column for ads*/
+/*set far right column for ads*
 div#gallerypagerightcol { width: 12em; float:right; text-align:center;
 }
 div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
 }
-/*set middle column for main content*/
+/*set middle column for main content*
 div#gallerypagemidcol.data { margin-left:135px; margin-right:155px;
 }
 /*set gallery block position*
 div#gallerypagegallery-block { position:relative; left: 8em; top: -170px;
 }
-/*set footer*/
+/*set footer*
 footer { clear:both; color:black; text-align:center; width:970px;
 }
 .clear { clear:both;
 }
-/*set menu buttons*/
+/*set menu buttons*
 li.btn a { display:block; background-color :#66CCFF; color:black; font-weight:bold; padding:4px; margin-left:0; text-align:center; list-style-type:none; text-decoration:none; width:110px;
 }
 li.btn a:hover { background-color:blue; color:white;
@@ -329,42 +329,42 @@ li.btn a:hover { background-color:blue; color:white;
 li.btn { width:110px;
 }
 /*SET THUMBNAIL GALLERY BLOCK*/
-/* Set general thumbnail styles */
+/* Set general thumbnail styles *
 #col-1 { position: absolute; top: 0; left: 0; width:85px;
 }
-/*place the first column on the page*/
+/*place the first column on the page*
 li { margin: 5px; list-style-type:none;
 }
 /*remove bullets from the un-ordered list elements and create the 
 MouseOut state (default) - create and position a space for the larger images and 
-hide them*/
+hide them*
 #col-1 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 330px; visibility: hidden;
 }
-/* MouseOver state (hover)- this reveals larger picture */
+/* MouseOver state (hover)- this reveals larger picture *
 #col-1 a:hover { background: white; }
 #col-1 a:hover img.hid { visibility:visible;
 }
 /*----------------------------------------------------*/
-/* set 2nd column of thumbnails 85px further over to right*/
+/* set 2nd column of thumbnails 85px further over to right*
 #col-2 { position: absolute; top: 0; left: 85px; width:85px;
 }
 li { margin: 5px; list-style-type:none;
 }
-/* MouseOut state (default) - hide larger picture */
+/* MouseOut state (default) - hide larger picture *
 #col-2 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 245px; margin-left:0;visibility: hidden;
 }
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #col-2 a:hover { background: white; }
 #col-2 a:hover img.hid { visibility:visible; }
 /*----------------------------------------------------*/
-/* set 3rd column of thumbnails 170px further over to right*/
+/* set 3rd column of thumbnails 170px further over to right*
 #col-3 { position: absolute; top: 0; left: 175px; width:95px; }
 li { margin: 5px; list-style-type:none;
 }
-/* MouseOut state (default) - hide larger picture */
+/* MouseOut state (default) - hide larger picture *
 #col-3 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 }
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #col-3a:hover { background: white;
 }
 #col-3 a:hover img.hid { visibility:visible;
@@ -431,12 +431,12 @@ body.ui-mobile-viewport.ui-overlay-a {
 /*add display attributes for the semantic tags* 
 header, footer, section, article, nav { display:block; 
 } 
-/*remove the # from #header*/
-.header#html5styleheader.data {width:920px; height:180px; padding:0; border:10px white solid; background: url(../images/bda.jpg);  background-size: cover; /* Or contain, or other options */
-  background-position: center; /* Adjust as needed */
+/*remove the # from #header*
+.header#html5styleheader.data {width:920px; height:180px; padding:0; border:10px white solid; background: url(../images/bda.jpg);  background-size: cover;  Or contain, or other options *
+  background-position: center; /* Adjust as needed *
   background-repeat: no-repeat; margin:10px auto; 
 }  
-/* Listing 8-5b. The CSS Style Sheet for Listing 8-5a (css3-text-shadow.css) */
+/* Listing 8-5b. The CSS Style Sheet for Listing 8-5a (css3-text-shadow.css) *
 body {background-color:#99CCFF;
 }
 #banner h1 { color: #fff; padding: 50px 0 0 20px; font-size: 300%; 
@@ -623,6 +623,7 @@ li {
 }
 
 */
+
 
 
 
