--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -88,7 +88,7 @@ body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 /*add display attributes for the semantic tags*
 header, footer, section, article, nav { display:block;
 }
-/*remove the # from #header*
+/*remove the # from #header*/
 header#html5style2header.data {width:920px; height:180px; padding:0; border:10px white solid; background: url(../../orris0/bda-20.jpg); margin:10px auto; background-position: bottom; /* Adjust as needed *
   background-repeat: no-repeat; margin:10px auto;
 }
@@ -623,6 +623,7 @@ li {
 }
 
 */
+
 
 
 
