--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -10,7 +10,7 @@ header, footer, section, article, nav { display:block;
 }
 /*remove the # from #header*/
 header {width:920px; height:180px; padding:0; border:10px white solid; 
-background: url(images/header3.jpg); margin:10px auto;
+background: url(../../orris0/bda-20.jpg); margin:10px auto; background-position: bottom;
 }
 h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px;
 width:480px;
@@ -623,6 +623,7 @@ li {
 }
 
 */
+
 
 
 
