--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -15,7 +15,7 @@ h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; wid
 }
 #rosette { position:relative; left:750px; top:5px;
 }
-#content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: -10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
+#content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: -10px; padding:8px; font-size:medium; color:maroon;
 }
 h2 { font-size:x-large; color:white; margin:0 0 10px 0;
 }
@@ -615,6 +615,7 @@ li {
 }
 
 */
+
 
 
 
