--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -81,10 +81,10 @@ body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 header, footer, section, article, nav { display:block;
 }
 /*remove the # from #header*/
-header#html5style2header.data {width:920px; height:180px; padding:0; border:10px white solid; background: url(../../orris0/bda-20.jpg); margin:10px auto; background-position: bottom; /* Adjust as needed *
+header#html5style2header.data {width:920px; height:180px; padding:0; border:10px white solid; background: url(../../orris0/bda-20.jpg); margin:10px auto; background-position: bottom; /* Adjust as needed */
   background-repeat: no-repeat; margin:10px auto;
 }
-h1 { font-size:300%; color :white; /* position: relative; left:90px; top: 15px; width:5500px; *
+h1 { font-size:300%; color :white; /* position: relative; left:90px; top: 15px; width:5500px; */
 }
 #rosette { position:relative; left:750px; top:5px;
 }
@@ -101,28 +101,28 @@ div#html5style2rightcol { width: 135px; float:right; height: 252px; margin-right
 #html5style2midcol { margin-left:315px; margin-right:145px; margin-top:10px; 
 vertical-align:top;
 }
-/*set nav block position and width and remove the #menu item*
+/*set nav block position and width and remove the #menu item*/
 nav#html5style2nav ul { margin:10px 0 10px 0; width:135px; float:right;
 }
-/*Set un-ordered list style within the menu block only. This removes bullets*
+/*Set un-ordered list style within the menu block only. This removes bullets*/
 nav#html5style2nav li { list-style-type:none;
 }
-/* set general side button styles *
+/* set general side button styles */
 li.btn { margin-bottom: 3px; text-align: center; width:130px;
 }
-/* set general anchor styles and include the zoom fix for IE6*
+/* set general anchor styles and include the zoom fix for IE6*/
 li.btn a { display: block; color: white; font-weight: bold; 
 text-decoration: none; zoom:1;
 }
 /* specify mouse state styles */
-/* mouseout (default) *
+/* mouseout (default) */
 li.btn a { background:#559a55; color: white; border: 5px outset #559a55; 
 padding-bottom:3px;
 }
-/* mouseover *
+/* mouseover */
 li.btn a:hover { background: red; color:white; border: 5px outset red;
 }
-/*mouse active*
+/*mouse active*/
 li.btn a:active { background:maroon; border: 5px inset maroon;
 }
 br.clear { clear:both;
@@ -615,6 +615,7 @@ li {
 }
 
 */
+
 
 
 
