--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -9,7 +9,7 @@ body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 header, footer, section, article, nav { display:block;
 }
 /*remove the # from #header*/
-header {width:920px; height:180px; padding:0; border:10px white solid; background: url(./bda-20.jpg); margin:10px auto; background-position: bottom;
+header#html5style2header.data {width:920px; height:180px; padding:0; border:10px white solid; background: url(./bda-20.jpg); margin:10px auto; background-position: bottom;
 }
 h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; width:480px;
 }
@@ -615,6 +615,7 @@ li {
 }
 
 */
+
 
 
 
