--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -15,23 +15,23 @@ h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; wid
 }
 #rosette { position:relative; left:750px; top:5px;
 }
-#content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: -10px; padding:8px; font-size:medium; color:maroon;
+div#html5style2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: -10px; padding:8px; font-size:medium; color:maroon;
 }
 h2 { font-size:x-large; color:white; margin:0 0 10px 0;
 }
 h3 { font-size:large; color:white; margin:0 0 6px 0;
 }
-#leftcol { float:left; width: 310px; vertical-align:top;
+div#html5style2leftcol { float:left; width: 310px; vertical-align:top;
 }
-#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
+div#html5style2rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
-#midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top;
+div#html5style2midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top;
 }
 /*set nav block position and width and remove the #menu item*/
-nav ul { margin:10px 0 10px 0; width:135px; float:right;
+nav#html5style2nav,data ul { margin:10px 0 10px 0; width:135px; float:right;
 }
 /*Set un-ordered list style within the menu block only. This removes bullets*/
-nav li { list-style-type:none;
+nav#html5style2nav.data li { list-style-type:none;
 }
 /* set general side button styles */
 li.btn { margin-bottom: 3px; text-align: center; width:130px;
@@ -615,6 +615,7 @@ li {
 }
 
 */
+
 
 
 
