--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -66,7 +66,7 @@ footer { clear:both; color:maroon; text-align:center;
 
 /* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css)9
 /* (The key items are picked out in bold type.) */
-/*equalise for various browsers and change #header to header*
+/*equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
 }
 img#kite { width: 960px;}
@@ -615,6 +615,7 @@ li {
 }
 
 */
+
 
 
 
