--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -17,7 +17,7 @@ h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; wid
 }
 div#html5style2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: -10px; padding:8px; font-size:medium; color:maroon;
 }
-h2 { font-size:x-large; color:white; margin:0 0 10px 0;
+h2 { font-size: 125%; color:white; margin:0 0 10px 0;
 }
 h3 { font-size:large; color:white; margin:0 0 6px 0;
 }
@@ -615,6 +615,7 @@ li {
 }
 
 */
+
 
 
 
