--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -3,8 +3,10 @@
 equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
 }
+/*
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
+*/
 /*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block;
 }
@@ -69,7 +71,7 @@ footer { clear:both; color:maroon; text-align:center;
 /*equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
 }
-img#kite { image-size: cover;}
+img#kite { image-size: 960px;}
 img#paper { image-size: 960px;}
 img#take-off { image-size: cover;}
 img#orange-globe { image-size: cover;}
