--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -72,9 +72,9 @@ footer { clear:both; color:maroon; text-align:center;
 div body header #content { margin:0; padding:0; border:0;
 }
 img#kite { width: 960px;}
-img#paper { image-size: 960px;}
-img#take-off { image-size: cover;}
-img#orange-globe { image-size: cover;}
+img#paper { width: 960px;}
+img#take-off { width: cover;}
+img#orange-globe { width: cover;}
 img#waves { image-size: cover;}
 img#plane { image-size: 960px;}
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
