--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -11,13 +11,13 @@ body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 header, footer, section, article, nav { display:block;
 }
 /*remove the # from #header*/
-header#html5style2header.data {width:920px; height:180px; padding:0; border:10px white solid; background: url(./bda-20.jpg); margin:10px auto; background-position: bottom;
+header#html5style2header.data {width:920px; height:180px; padding:0; border:10px white solid; background: url(./bda-20.jpg); margin:10px auto; background-position: bottom;
 }
 h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; width:480px;
 }
 #rosette { position:relative; left:750px; top:5px;
 }
-div#html5style2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: -10px; padding:8px; font-size:medium; color:maroon;
+div#html5style2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: -10px; padding:8px; font-size:medium; color:maroon;
 }
 h2 { font-size: 125%; color:white; margin:0 0 10px 0;
 }
@@ -27,7 +27,7 @@ div#html5style2leftcol { float:left; width: 310px; vertical-align:top;
 }
 div#html5style2rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
-div#html5style2midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top;
+div#html5style2midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top;
 }
 /*set nav block position and width and remove the #menu item*/
 nav#html5style2nav,data ul { margin: 0px 0 10px 0; width:135px; float:right;
@@ -39,11 +39,11 @@ nav#html5style2nav.data li { list-style-type:none;
 li.btn { margin-bottom: 3px; text-align: center; width:130px;
 }
 /* set general anchor styles and include the zoom fix for IE6*/
-li.btn a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
+li.btn a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
 }
 /* specify mouse state styles */
 /* mouseout (default) */
-li.btn a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px;
+li.btn a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px;
 }
 /* mouseover */
 li.btn a:hover { background: red; color:white; border: 5px outset red;
@@ -75,8 +75,8 @@ img#kite { width: 1265px; height: 500px;}
 img#paper { width: 960px;}
 img#take-off { width: cover;}
 img#orange-globe { width: cover;}
-img#waves { image-size: cover;}
-img#plane { image-size: 960px;}
+img#waves { width: 960px;}
+img#plane { width: 960px;}
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
 /*add display attributes for the semantic tags*
