--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -71,7 +71,7 @@ footer { clear:both; color:maroon; text-align:center;
 /*equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
 }
-img#kite { width: 1264px; height: 500px;}
+img#kite { width: 119em; height: 41em;}
 img#paper { width: 960px;}
 img#take-off { width: cover;}
 img#orange-globe { width: cover;}
