--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -59,13 +59,6 @@ br.clear { clear:both;
 footer { clear:both; color:maroon; text-align:center;
 }
 
-
-
-
-
-
-
-
 /* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css)9
 /* (The key items are picked out in bold type.) */
 /*equalise for various browsers and change #header to header*/
@@ -92,9 +85,9 @@ h1 { font-size:300%; color :white; /* position: relative; left:90px; top: 15px; 
 }
 #html5style2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: -30px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
 }
-h2 { font-size:x-large; color: burlywood; margin:0 0 10px 0;
+h2 { font-size: 157%; color: burlywood; margin:0 0 10px 0;
 }
-h3 { font-size:large; color:white; margin:0 0 6px 0; padding: 2%;
+h3 { font-size: 120%; color:white; margin:0 0 6px 0; padding: 2%;
 }
 div#html5style2leftcol { float:left; width: 310px; vertical-align:top;
 }
