--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -139,7 +139,7 @@ h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
 }
 h2 {font-size:large; font-family:"times new roman"; text-align:center;
 }
-/*PAGE LAYOUT*
+/*PAGE LAYOUT*/
 body {margin:auto; width:970px;
 }
 header { width:970px;
@@ -234,14 +234,14 @@ border:0;
 /*add display attributes for the semantic tags*
 header, footer, section, article, nav { display:block;
 }
-/*SET FONTS*
+/*SET FONTS*/
 span.small { font-size:small;
 }
 h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
 }
 h2 {font-size:large; font-family:"times new roman"; text-align:center;
 }
-/*PAGE LAYOUT*
+/*PAGE LAYOUT*/
 body {margin:auto; width:970px;
 }
 header { width:970px;
@@ -250,7 +250,7 @@ nav#gallerypagenav.data { margin-left:10px; width:115px;
 }
 nav#gallerypagenav ul { margin-left:0; border:0; width:115px;
 }
-/*set far right column for ads*
+/*set far right column for ads*/
 div#gallerypagerightcol { width:150px; float:right; text-align:center;
 }
 div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
@@ -258,15 +258,15 @@ div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
 /*set middle column for main content*/
 div#gallerypagemidcol { margin-left:135px; margin-right:155px;
 }
-/*set gallery block position*
+/*set gallery block position*/
 div#gallerypagegallery-block { position:relative; left: 8em; top: -10px;
 }
 
 
-/*set gallery block position*
+/*set gallery block position*/
 div#gallery-block { position:relative; left: 30px; top:10px;
 }
-/*set footer*
+/*set footer*/
 footer { clear:both; color:black; text-align:center; width:970px;
 }
 .clear { clear:both;
@@ -275,7 +275,7 @@ footer { clear:both; color:black; text-align:center; width:970px;
 /*add display attributes for the semantic tags*
 header, footer, section, article, nav { display:block;
 }
-/*SET FONTS*
+/*SET FONTS*/
 span.small { font-size:small;
 }
 /*
@@ -610,6 +610,7 @@ li {
 }
 
 */
+
 
 
 
