--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -41,7 +41,7 @@ div#gallerypagemidcol { margin-left:315px; margin-right:145px; margin-top:10px;
 vertical-align:top;
 }
 /*set nav block position and width and remove the #menu item*/
-nav#html5style2nav ul { margin:10px 0 10px 0; width:135px; float:right;
+nav#gallerypagenav ul { margin:10px 0 10px 0; width:135px; float:right;
 }
 /*Set un-ordered list style within the menu block only. This removes bullets*/
 nav#gallerypage2nav  li { list-style-type:none;
