--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -53,7 +53,7 @@ li.btn a:active { background:maroon; border: 5px inset maroon;
 }
 br.clear { clear:both;
 }
-#midcol img { margin-left:10px;
+#html5style2midcol img { margin-left:10px;
 }
 /*change #footer to footer */
 footer { clear:both; color:maroon; text-align:center;
@@ -610,6 +610,7 @@ li {
 }
 
 */
+
 
 
 
