--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -64,7 +64,7 @@ footer { clear:both; color:maroon; text-align:center;
 /*equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
 }
-img#kite { margin-top: -28px margin-left: 1em; width: 58.8em; height: 29em;}
+img#kite { margin-top: -28px; margin-left: 1em; width: 58.8em; height: 29em;}
 img#paper { width: 903px;}
 img#take-off { width: 903;}
 img#orange-globe { width: 903;}
