--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -240,8 +240,10 @@ header, footer, section, article, nav { display:block;
 /*SET FONTS*/
 span.small { font-size:small;
 }
+/*
 h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
 }
+*/
 h2 {font-size:large; font-family:"times new roman"; text-align:center;
 }
 /*PAGE LAYOUT*/
