--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -243,10 +243,10 @@ span.small { font-size:small;
 /*
 h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
 }
-*/
+
 h2 {font-size:large; font-family:"times new roman"; text-align:center;
 }
-/*PAGE LAYOUT*/
+PAGE LAYOUT*/
 body {margin:auto; width:970px;
 	font-family:'Open-sans', sans-serif;
     font-size:medium;
