--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -246,13 +246,14 @@ h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
 
 h2 {font-size:large; font-family:"times new roman"; text-align:center;
 }
-PAGE LAYOUT*/
+PAGE LAYOUT
 body {margin:auto; width:970px;
 	font-family:'Open-sans', sans-serif;
     font-size:medium;
     line-height:1.5em;
     padding:0;
 }
+*/
 header { width:970px;
 }
 nav#gallerypagenav.data { margin-left:10px; width:115px;
