--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -24,7 +24,7 @@ div#html5style2content { background-color:transparent; border-left:5px white sol
 }
 h2 { font-size: 100%; color:white; margin:0 0 10px 0;
 }
-h3 { font-size:large; color: burlywood; margin:0 0 6px 0;
+h3 { font-size:100%; color: burlywood; margin:0 0 6px 0;
 }
 div#html5style2leftcol { float:left; width: 310px; vertical-align:top;
 }
@@ -620,6 +620,7 @@ li {
 }
 
 */
+
 
 
 
