--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -12,11 +12,11 @@ div body header #content { margin:0; padding:0; border:0;
 /*set attributes for consistent appearance in all browsers*/
 html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
-/*set images to have no borders*
+/*set images to have no borders*/
 img {
 border:0;
 }
-/*add display attributes for the semantic tags*
+/*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block;
 }
 /*SET FONTS*/
@@ -642,6 +642,7 @@ li {
 }
 
 */
+
 
 
 
