--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -203,23 +203,23 @@ nav#gallerypagenav.data { float:left; margin-left:10px; width:115px;
 }
 nav#gallerypagenav.data ul { margin-left:0; border:0; width:115px;
 }
-/*set far right column for ads*
+/*set far right column for ads*/
 div#gallerypagerightcol { width: 12em; float:right; text-align:center;
 }
 div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
 }
-/*set middle column for main content*
+/*set middle column for main content*/
 div#gallerypagemidcol.data { margin-left:135px; margin-right:155px;
 }
-/*set gallery block position*
+/*set gallery block position*/
 div#gallerypagegallery-block.data { position:relative; left: 6em; top: 10px;
 }
-/*set footer*
+/*set footer*/
 footer { clear:both; color:black; text-align:center; width:970px;
 }
 .clear { clear:both;
 }
-/*set menu buttons*
+/*set menu buttons*/
 #gallerypagenav li.btn a { display:block; background-color :#66CCFF; color:black; font-weight:bold; padding:4px; margin-left:0; text-align:center; list-style-type:none; text-decoration:none; width:110px;
 }
 #gallerypagenav li.btn a:hover { background-color:blue; color:white;
@@ -227,10 +227,10 @@ footer { clear:both; color:black; text-align:center; width:970px;
 #gallerypagenav li.btn { width:110px;
 }
 /*SET THUMBNAIL GALLERY BLOCK*/
-/* Set general thumbnail styles *
+/* Set general thumbnail styles */
 #col-1 { position: absolute; top: 0; left: 0; width:85px;
 }
-/*place the first column on the page*
+/*place the first column on the page*/
 li { margin: 5px; list-style-type:none;
 }
 /*remove bullets from the un-ordered list elements and create the 
@@ -238,31 +238,31 @@ MouseOut state (default) - create and position a space for the larger images and
 hide them*
 #col-1 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 330px; visibility: hidden;
 }
-/* MouseOver state (hover)- this reveals larger picture *
+/* MouseOver state (hover)- this reveals larger picture */
 #col-1 a:hover { background: white; }
 #col-1 a:hover img.hid { visibility:visible;
 }
 /*----------------------------------------------------*/
-/* set 2nd column of thumbnails 85px further over to right*
+/* set 2nd column of thumbnails 85px further over to right*/
 #col-2 { position: absolute; top: 0; left: 85px; width:85px;
 }
 li { margin: 5px; list-style-type:none;
 }
-/* MouseOut state (default) - hide larger picture *
+/* MouseOut state (default) - hide larger picture */
 #col-2 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 245px; margin-left:0;visibility: hidden;
 }
-/* MouseOver state (hover)- reveal larger picture *
+/* MouseOver state (hover)- reveal larger picture */
 #col-2 a:hover { background: white; }
 #col-2 a:hover img.hid { visibility:visible; }
 /*----------------------------------------------------*/
-/* set 3rd column of thumbnails 170px further over to right*
+/* set 3rd column of thumbnails 170px further over to right*/
 #col-3 { position: absolute; top: 0; left: 175px; width:95px; }
 li { margin: 5px; list-style-type:none;
 }
-/* MouseOut state (default) - hide larger picture *
+/* MouseOut state (default) - hide larger picture */
 #col-3 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 }
-/* MouseOver state (hover)- reveal larger picture *
+/* MouseOver state (hover)- reveal larger picture */
 #col-3a:hover { background: white;
 }
 #col-3 a:hover img.hid { visibility:visible;
@@ -642,6 +642,7 @@ li {
 }
 
 */
+
 
 
 
