--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -120,12 +120,12 @@ footer { clear:both; color:maroon; text-align:center;
 /*equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
 }
-img#kite { width: 100%; height: 500px */;}
-img#paper { width: 903px;}
-img#take-off { width: 903;}
-img#orange-globe { width: 903;}
-img#waves { width: 903px;}
-img#plane { width: 930px; margin-left: 33.2em;}
+img#kite { width: 900px; height: 500px */;}
+img#paper { width: 900px;}
+img#take-off { width: 900;}
+img#orange-globe { width: 900;}
+img#waves { width: 900px;}
+img#plane { width: 930px;}
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
 /*add display attributes for the semantic tags*
@@ -642,6 +642,7 @@ li {
 }
 
 */
+
 
 
 
