--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -71,10 +71,10 @@ h1 { font-size:300%; color :white; position: relative; left:36px; top: 13px; wid
 }
 #rosette { position:relative; left:750px; top:5px;
 }
-
+/*
 div#html5style2content { background-color:transparent; border-left:5px white solid; border-right:5px white solid; border-bottom:5px white solid; width: 904px; margin-left: 20px; margin-top: 170px; padding:8px; font-size:medium; color:maroon;
 }
-
+*/
 h2 { font-size: 100%; color:white; margin:0 0 10px 0;
 }
 h3 { font-size:100%; color: burlywood; margin:0 0 6px 0;
@@ -642,6 +642,7 @@ li {
 }
 
 */
+
 
 
 
