--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -30,7 +30,7 @@ html {
 .ui-mobile, .ui-mobile body{
     height: 99.9%;
 }
-
+/*
 div.wrapper {
     position: relative; 
     top: -0.5em; 
@@ -420,7 +420,7 @@ li { margin: 5px; list-style-type:none;
 #col-3 a:hover img.hid { visibility:visible;
 }
 
-/*set attributes for consistent appearance in all browsers*
+/*set attributes for consistent appearance in all browsers*/
 div.wrapper { 
     position: relative;
     top: 0em;
@@ -643,6 +643,7 @@ li {
 }
 
 */
+
 
 
 
