--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -456,7 +456,7 @@ header, footer, section, article, nav { display:block;
   background-position: center; /* Adjust as needed *
   background-repeat: no-repeat; margin:10px auto; 
 }  
-/* Listing 8-5b. The CSS Style Sheet for Listing 8-5a (css3-text-shadow.css) *
+/* Listing 8-5b. The CSS Style Sheet for Listing 8-5a (css3-text-shadow.css) */
 body {background-color:#99CCFF;
 }
 #banner h1 { color: #fff; padding: 50px 0 0 20px; font-size: 300%; 
@@ -643,6 +643,7 @@ li {
 }
 
 */
+
 
 
 
