--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -19,7 +19,7 @@ border:0;
 /*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block;
 }
-/*SET FONTS*/
+/*SET FONTS*
 span.small { font-size:small;
 }
 html {
@@ -121,12 +121,12 @@ footer { clear:both; color:maroon; text-align:center;
 /*equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
 }
-img#kite { width: 900px; height: 500px;}
-img#paper { width: 900px;}
-img#take-off { width: 900;}
-img#orange-globe { width: 900;}
-img#waves { width: 900px;}
-img#plane { width: 930px;}
+img#kite { width: #; height: #;}
+img#paper { #;}
+img#take-off { #;}
+img#orange-globe { #;}
+img#waves { #;}
+img#plane { #;}
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
 /*add display attributes for the semantic tags*/
@@ -653,6 +653,7 @@ li {
 }
 
 */
+
 
 
 
