--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -77,7 +77,7 @@ footer { clear:both; color:maroon; text-align:center;
 /*equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
 }
-img#kite { width: 95%; height: #;}
+img#kite { width: 95%;}
 img#paper { 920px;}
 img#take-off { #;}
 img#orange-globe { #;}
@@ -86,13 +86,13 @@ img#plane { }
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
 /*remove the # from #header*/
-header#html5style2header.data { width:920px; height:180px; padding:0; border:5px white solid; background: url(../../orris0/bda-20.jpg); margin:20px; background-position: bottom; /* Adjust as needed */ background-repeat: no-repeat; margin-left: 31em;
+header#html5style2header.data { width:920px; height:180px; padding:0; border:5px white solid; background: url(../../orris0/bda-20.jpg); margin:20px; background-position: bottom; /* Adjust as needed */ background-repeat: no-repeat; margin-left: 490px;
 }
 h1 { font-size:300%; color :white; /* position: relative; left:90px; top: 15px; width:5500px; */
 }
 #rosette { position:relative; left:750px; top:5px;
 }
-#html5style2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: 40px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
+#html5style2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: 180px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
 }
 h2 { font-size: 157%; color: rgb(17, 16, 16); margin:0 0 10px 0;
 }
