--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -87,7 +87,7 @@ h1 { font-size:300%; color :white; /* position: relative; left:90px; top: 15px; 
 }
 #rosette { position:relative; left:750px; top:5px;
 }
-#html5style2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: 180px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
+#html5style2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top: 180px; margin-left:490px; margin-right:auto; padding:8px; font-size:medium; color:maroon;
 }
 h2 { font-size: 157%; color: rgb(17, 16, 16); margin:0 0 10px 0;
 }
