--- a/CSS/flexboxgrid.css
+++ b/CSS/flexboxgrid.css
@@ -14,7 +14,7 @@ h1 { font-size:300%; color :white; position: relative; left:18px; top: 19px; wid
 }
 #rosette { position:relative; left:750px; top:5px; }
 #html5style2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
-border-bottom:10px white solid; width: 904px; margin-top:-10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
+border-bottom:10px white solid; width: 904px; margin-top:195px; margin-left:484px; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
 /*
 h2 { font-size:x-large; color:white; margin:0 0 10px 0; 
