--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -278,9 +278,8 @@ nav#gallerypagenav.data { margin-left:10px; width:115px;
 }
 nav#gallerypagenav ul { margin-left:0; border:0; width:115px;
 }
-/*set far right column for ads*/
-div#gallerypagerightcol { width:150px; float:right; text-align:center;
-}
+*/
+
 div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
 }
 /*set middle column for main content*/
