--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -286,7 +286,7 @@ div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
 div#gallerypagemidcol { margin-left:135px; margin-right:155px;
 }
 /*set gallery block position*/
-div#gallerypagegallery-block { position:relative; left: 8em; top: -10px;
+div#gallerypagegallery-block { position:relative; left: 30px; top: 10px;
 }
 
 
